--- a/cookbooks/apache/templates/index.html.erb
+++ b/cookbooks/apache/templates/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Hello from chef!</h1>
+<h1>morning from chef</h1>
 <h2>ip: <%= node['ipaddress'] %></h2>
 <h3>hostname: <%= node['hostname'] %></h3>
